# website

./: .dir-locals.el  .envrc  .gitignore  CLAUDE.md  README.md  eslint.config.js  flake.nix  index.html  package-lock.json  package.json  playwright.config.js  vite.config.js
coverage/: board.js.html  clover.xml  coverage-final.json  engine.js.html  index.html  pieces.js.html  scoring.js.html  types.js.html
coverage/game-engine/: board.js.html  engine.js.html  index.html  pieces.js.html  scoring.js.html  types.js.html
coverage/hooks/: index.html  useDynamicBoardSize.js.html
coverage/rendering/: canvas-renderer.js.html  colors.js.html  index.html
docs/: REFERENCE.md
e2e/: high-speed-spawn.spec.js  piece-spawn.spec.js  seeded-stacking.spec.js
server/: package-lock.json  package.json
server/src/: config.js  index.js
server/src/routes/: scores.js
src/: App.css  App.jsx  index.css
src/components/: CenterCard.css  CenterCard.jsx  TetrisBackground.css  TetrisBackground.jsx  TetrisSidebar.css  TetrisSidebar.jsx  TopNav.css  TopNav.jsx
src/game-engine/: board.js  engine-interface.js  engine.js  pieces.js  scoring.js  types.js
src/hooks/: useAutoSolver.js  useDynamicBoardSize.js  useGameLoop.js  useInputHandler.js  useRoute.js  useSportsData.js
src/rendering/: canvas-renderer.js  colors.js
tetris-solver/: Cargo.toml
tetris-solver/src/: bag.rs  board.rs  evaluator.rs  evaluator_param.rs  game_runner.rs  lib.rs  moves.rs  params.rs  pieces.rs  placement.rs  solver.rs  solver_param.rs  strategy.rs
tetris-solver/src/evolve/: individual.rs  mod.rs
(+25 files in other folders)
