[package]
name = "tetris-solver"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "=0.2.114"
rand = { version = "0.9", optional = true }
rayon = { version = "1.10", optional = true }

[dev-dependencies]

[features]
default = []
evolve = ["rand", "rayon"]

[[bin]]
name = "evolve"
path = "src/bin/evolve.rs"
required-features = ["evolve"]

# WASM release: optimize for size
[profile.release]
opt-level = "s"
lto = true

# Evolution binary: optimize for speed
[profile.release-evolve]
inherits = "release"
opt-level = 3
lto = "fat"
